🐛 fix(checkbox): removed z-index from checkbox and radio.

--- a/assets/scss/shared-ui/_radio-checkbox.scss
+++ b/assets/scss/shared-ui/_radio-checkbox.scss
@@ -21,7 +21,6 @@
 			border-radius: $border-radius;
 			background-color: $radio-checkbox--background;
 			transition: 0.3s ease;
-			z-index: 1;
 			pointer-events: all;
 
 			&:before {
